--- a/app/src/main/res/layout/activity_add_medicine_page.xml
+++ b/app/src/main/res/layout/activity_add_medicine_page.xml
@@ -29,7 +29,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_left_arrow" />
+            app:srcCompat="@drawable/ic_left_arrow"
+            android:rotationY="@integer/angle_rtl_180"/>
 
 
         <TextView
@@ -57,7 +58,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/montserrat"
-        android:text="Name"
+        android:text="@string/name"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/head" />
@@ -100,7 +101,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/montserrat"
-        android:text="Start"
+        android:text="@string/start"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -116,7 +117,7 @@
         android:background="@drawable/custom_edit_text"
         android:elevation="0dp"
         android:fontFamily="@font/montserrat"
-        android:text="Set Date"
+        android:text="@string/SetTimeApp"
         android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/calIcon"
