--- a/app/src/main/res/layout/activity_google_calendar_connection.xml
+++ b/app/src/main/res/layout/activity_google_calendar_connection.xml
@@ -33,7 +33,8 @@
             app:layout_constraintStart_toStartOf="parent"
             android:visibility="invisible"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_left_arrow" />
+            app:srcCompat="@drawable/ic_left_arrow"
+            android:rotationY="@integer/angle_rtl_180"/>
 
         <TextView
             android:id="@+id/titleofscreen"
