--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -238,12 +238,13 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:visibility="invisible"
-        android:text="Please Note :\n - To produce more accurate results, please sync your Smart-watch data."
+        android:text="@string/please_note"
         app:layout_constraintBottom_toTopOf="@+id/generate_report_btn"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout7"
         app:layout_constraintStart_toStartOf="@+id/linearLayout7"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />
+
+
 
         <ProgressBar
             android:id="@+id/progress_bar"
