--- a/app/src/main/res/layout/text_draft_row.xml
+++ b/app/src/main/res/layout/text_draft_row.xml
@@ -43,7 +43,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_margin="10dp"
             android:orientation="vertical">
 
