--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/WelcomePage"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/main_background"
-    tools:context=".WelcomePage"
-    android:id="@+id/WelcomePage">
+    tools:context=".WelcomePage">
 
     <View
         android:id="@+id/white_frame"
@@ -78,6 +77,34 @@
         app:layout_constraintEnd_toEndOf="@+id/white_frame"
         app:layout_constraintStart_toStartOf="@+id/white_frame"
         app:layout_constraintTop_toBottomOf="@+id/login" />
+
+    <TextView
+        android:id="@+id/Arabic"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:text="ع"
+        android:layout_marginTop="40dp"
+        android:gravity="center"
+        android:elevation="10dp"
+        android:background="@drawable/custom_edit_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.7"
+        app:layout_constraintStart_toEndOf="@+id/English"
+        app:layout_constraintTop_toBottomOf="@+id/register" />
+
+    <TextView
+        android:id="@+id/English"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:text="E"
+        android:gravity="center"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/custom_edit_text"
+        android:elevation="10dp"
+        app:layout_constraintEnd_toStartOf="@+id/Arabic"
+        app:layout_constraintHorizontal_bias="0.7"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/register" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
