--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -59,7 +59,7 @@
 
         <ImageView
             android:id="@+id/AL_graph"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="260dp"
             android:layout_gravity="center"
             android:layout_marginStart="24dp"
@@ -67,6 +67,24 @@
             android:layout_marginEnd="24dp"
             android:paddingTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text11" />
+
+        <TextView
+            android:id="@+id/noResult"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:fontFamily="@font/montserrat"
+            android:text="No data are available to analyze."
+            android:textColor="#817889"
+            android:textSize="15sp"
+            android:visibility="gone"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="@+id/AL_graph"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.6"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text11" />
 
@@ -124,10 +142,12 @@
             android:textColor="@color/darkAccent"
             android:textSize="35sp"
             android:textStyle="bold"
+            android:text="--"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/improvement_per"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent" />
+
 
         <TextView
             android:id="@+id/improvement_per"
@@ -139,6 +159,7 @@
             android:text="%"
             android:textColor="@color/darkAccent"
             android:textSize="35sp"
+            android:visibility="visible"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
