--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -78,11 +78,84 @@
         app:layout_constraintStart_toStartOf="@+id/white_frame"
         app:layout_constraintTop_toBottomOf="@+id/login" />
 
+    <LinearLayout
+        android:id="@+id/linearLayout9"
+        android:layout_width="320dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:clickable="true"
+        android:focusable="auto"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/register">
+
+    <ImageView
+        android:id="@+id/language_icon"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="15dp"
+        app:srcCompat="@drawable/ic_language_icon" />
+
     <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        android:layout_gravity="center"
+        android:fontFamily="@font/montserrat"
+        android:gravity="center_vertical"
+        android:paddingStart="10dp"
+        android:text="@string/language"
+        android:textColor="#515C6F"
+        android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/English"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:fontFamily="@font/montserrat"
+            android:gravity="center"
+            android:text="@string/english"
+            android:textColor="#66515C6F"
+            android:textSize="15sp"
+            tools:ignore="RtlCompat" />
+
+       <!-- <ImageView
+            android:id="@+id/go_to3"
+            android:layout_width="30dp"
+            android:layout_height="33dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/ic_go_to"
+            android:rotationY="@integer/angle_rtl_180"/> -->
+
+        <TextView
+            android:id="@+id/Arabic"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:fontFamily="monospace"
+            android:gravity="center"
+            android:text="@string/arabic"
+            android:textColor="#66515C6F"
+            android:textSize="15sp" />
+
+
+
+    </LinearLayout>
+    <!-- <TextView
         android:id="@+id/Arabic"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:text="ع"
+        android:text="العربية"
         android:layout_marginTop="40dp"
         android:gravity="center"
         android:elevation="10dp"
@@ -96,7 +169,7 @@
         android:id="@+id/English"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:text="E"
+        android:text="Eng"
         android:gravity="center"
         android:layout_marginTop="40dp"
         android:background="@drawable/custom_edit_text"
@@ -105,6 +178,6 @@
         app:layout_constraintHorizontal_bias="0.7"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/register" />
-
+-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
