--- a/app/src/main/res/layout/location_row.xml
+++ b/app/src/main/res/layout/location_row.xml
@@ -46,7 +46,7 @@
                 android:text="Name"
                 android:textColor="#000000"
                 android:textSize="18dp"
-                app:layout_constraintEnd_toStartOf="@+id/location_AL"
+                app:layout_constraintEnd_toStartOf="@+id/freq"
                 app:layout_constraintStart_toEndOf="@+id/textView5"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -70,7 +70,7 @@
                 android:textColor="@color/black"
                 app:layout_constraintStart_toEndOf="@id/textView4"
                 app:layout_constraintEnd_toStartOf="@+id/freqN"
-                app:layout_constraintTop_toBottomOf="@+id/location_AL" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/freqN"
@@ -79,7 +79,7 @@
                 android:layout_weight="2"
                 android:text="10"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/location_AL" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/nearestPlaces"
