--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -77,7 +77,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:fontFamily="@font/montserrat"
-            android:text="No data are available to analyze."
+            android:text="@string/no_data_are_available_to_analyze"
             android:textColor="#817889"
             android:textSize="15sp"
             android:visibility="gone"
