--- a/app/src/main/res/layout/notification_card.xml
+++ b/app/src/main/res/layout/notification_card.xml
@@ -7,7 +7,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/notification_card"
-        android:layout_width="230dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:background="#F3F3F3"
@@ -45,8 +45,8 @@
                 android:layout_alignParentBottom="true"
                 android:layout_marginStart="1dp"
                 android:layout_marginBottom="5dp"
-                android:text="Reminder message will be here"
-                android:textSize="10sp" />
+                android:text="Reminder message will be written here"
+                android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/reminder_time"
@@ -58,7 +58,7 @@
                 android:layout_marginEnd="3dp"
                 android:text="time"
                 android:textAlignment="textEnd"
-                android:textSize="8sp" />
+                android:textSize="10sp" />
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
