--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -36,8 +36,6 @@
             android:rotationY="@integer/angle_rtl_180"/>
 
 
-
-
         <ImageView
             android:id="@+id/edit_profile_btn"
             android:layout_width="30dp"
@@ -46,7 +44,7 @@
             android:layout_marginEnd="25dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_edit" />
+            app:srcCompat="@drawable/ic_edit_profile" />
 
         <TextView
             android:id="@+id/EditImg"
